# factory

./: .gitignore  Makefile  Taskfile.yml  pyproject.toml  setup.cfg  setup.py  testsuite.sh
.repo/: rules.toml
docs/: commands.txt
plugins/: bashsystemtemplates.py  complex.py  default.py
src/factory/: app.py  cli.py  core.py  settings.py
src/factory/content/: urls.py
src/factory/initialization/: helpers.py  utils.py  workingset.py
src/factory/ops/: repomanipulation.py
src/factory/ux/: cli.py
src/factorystandard/: core.py
src/factorystandard/content/: included.py
tests/: test_cmd_info.py
