[tool.poetry]
name = "factory"
version = "0.0.1"
description = ""
authors = ["Michael Verhulst <michael@terminallabs.com>"]
readme = "README.md"
packages = [{include = "factory", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
flask = "^3.0.0"
toml = "^0.10.2"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
black = "^24.1.1"
flake8 = "^7.0.0"
lowkit = { git = "git@github.com:terminal-labs-bem/lowkit.git"}

[tool.poetry.scripts]
factory = 'factory.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
