[tool.poetry]
name = "factory"
version = "0.0.2"
description = ""
authors = ["Michael Verhulst <michael@terminallabs.com>"]
readme = "README.md"
packages = [{include = "factory", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
flask = "^3.0.0"
pytest = "^8.1.1"
black = "^24.3.0"
flake8 = "^7.0.0"
coverage = "^7.4.4"
lowkit = {git = "https://github.com/terminal-labs-bem/lowkit.git"}
highkit = {git = "https://github.com/terminal-labs-bem/highkit.git"}


[tool.poetry.scripts]
factory = 'factory.ux.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
